--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateUserActivity"></activity>
+        <activity android:name=".CreateActivity"></activity>
+        <activity android:name=".CreateUserActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".HomeActivity" />
         <activity
