--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateActivity"></activity>
-        <activity android:name=".CreateUserActivity" />
+        <activity android:name=".CreateActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".HomeActivity" />
         <activity
